assignment release, stage 1